--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 ATLAS_URI=mongodb+srv://anik:1234@cluster0.eobel6m.mongodb.net/?retryWrites=true&w=majority
+TWILIO_AUTH_TOKEN = "270ff32fe16828869dc30e0c6926fa9e"
+TWILIO_ACCOUNT_SID = "AC55a59221acb23a5aa6f046740bb73317"
