--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.7",
     "springedge": "^1.0.6",
-    "two-step-auth": "^1.1.2"
+    "two-step-auth": "^1.1.2",
+    "uuid": "^8.3.2"
   }
 }
