--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.0-beta1",
     "react": "^18.2.0",
     "react-bootstrap-validation": "^0.1.11",
+    "react-calendar": "^3.7.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
