--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.4.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.7",
+    "socket.io": "^4.5.1",
     "springedge": "^1.0.6",
     "two-step-auth": "^1.1.2",
     "uuid": "^8.3.2"
